Update index.html 한국어 입력 수정

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LLAMAfile AI Assistant</title>
 </head>
 <body>
-    <h1>Ask LLAMAfile AI Assistant</h1>
+    <h1>LLAMAfile AI Assistant에게 질문하세요</h1>
     <form id="queryForm">
-        <label for="userInput">Enter your request:</label><br>
-        <textarea id="userInput" name="userInput" rows="4" cols="50">Write a limerick about python exceptions</textarea><br><br>
-        <button type="submit">Submit</button>
+        <label for="userInput">요청을 입력하세요:</label><br>
+        <textarea id="userInput" name="userInput" rows="4" cols="50">파이썬 예외에 대한 라임을 작성해 주세요</textarea><br><br>
+        <button type="submit">제출</button>
     </form>
-    <h2>Response:</h2>
+    <h2>응답:</h2>
     <pre id="responseOutput"></pre>
 
     <script>
